[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Решение задач с leetcode"
authors = ["Василий Субботин <subv13@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
