[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Решение задач с leetcode"
authors = ["Василий Субботин <subv13@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pre-commit = "^2.15.0"

[tool.black]
line-length = 119
target_version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
